Recruiting Model/main/default/objects/Location_Room__c/Location_Room__c.object-meta.xml
<CustomObject>
    <label>Location Room</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>