Recruiting Model/main/default/objects/Location_Room__c/fields/Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Company_Location__c</fullName>
    <inlineHelpText>Please select the Company Location where this room is located</inlineHelpText>
    <label>Company Location</label>
    <referenceTo>Company_Location__c</referenceTo>
    <relationshipLabel>Location Rooms</relationshipLabel>
    <relationshipName>Location_Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>