Recruiting Model/main/default/objects/Location_Room__c/fields/Conference_Ready__c.field-meta.xml
<CustomField>
    <fullName>Conference_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conference Ready</label>
    <type>Checkbox</type>
</CustomField>