Recruiting Model/main/default/objects/Location_Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>Phone__c</columns>
    <columns>Whiteboard__c</columns>
    <columns>Projector__c</columns>
    <columns>Conference_Ready__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>